# src/QueryApi/Controllers/DataChannelController.cs
@@ -3,6 +3,7 @@ using Vista.SDK.Transport.Json.DataChannel;
 using Vista.SDK.Transport.Json.TimeSeriesData;
 using QueryApi.Models;
 using QueryApi.Repository;
+using System.ComponentModel;
 
 namespace QueryApi.Controllers;
 
@@ -10,6 +11,13 @@ namespace QueryApi.Controllers;
 public sealed class DataChannelController : ControllerBase
 {
     private readonly DataChannelRepository _dataChannelRepository;
+
+    public sealed record TimeSeriesRequestDto(
+        [property: DefaultValue(
+            "/dnv-v2/vis-3-4a/411.1-4/C101.31-3/meta/qty-temperature/pos-inlet"
+        )]
+            string LocalId
+    );
 
     public DataChannelController(DataChannelRepository dataChannelRepository)
     {
@@ -61,6 +69,24 @@ public sealed class DataChannelController : ControllerBase
     )
     {
         var result = await _dataChannelRepository.GetTimeSeriesByFilter(filter, cancellationToken);
+        return Ok(result);
+    }
+
+    /// <summary>
+    /// Search for time series given a data channel internalId
+    /// </summary>
+    /// <param name="request"></param>
+    /// <param name="cancellationToken"></param>
+    [HttpPost]
+    [Route("api/data-channel/time-series/latest")]
+    public async Task<
+        ActionResult<DataChannelRepository.TimeSeriesDataWithProps>
+    > GetLatestTimeSeriesValue(TimeSeriesRequestDto request, CancellationToken cancellationToken)
+    {
+        var result = await _dataChannelRepository.GetLatestTimeSeriesForDataChannel(
+            request.LocalId,
+            cancellationToken
+        );
         return Ok(result);
     }
 }
